# mylib

./: .gitignore  pyproject.toml
mylib/: calc.py  main.py
tests/: test_calc.py  test_mylib.py
