[tool.poetry]
name = "mylib"
version = "0.1.0"
description = ""
authors = ["rmasutani <masutanirugby@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
black = "^20.8b1"
isort = "^5.7.0"
autoflake = "^1.4"
mock = "^4.0.3"
mypy = "^0.790"
responses = "^0.12.1"
jupyter = "^1.0.0"
numpy = "^1.19.5"
typing = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
